# polyus-test-task

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
deployment/: Dockerfile  docker-compose.local.yaml
deployment/entrypoints/: entrypoint_api.sh  entrypoint_db_migrate.sh
src/polyus_nsi/adapters/api/: app.py  exception_handlers.py  factories.py  routers.py
src/polyus_nsi/adapters/api/v1/: routers.py
src/polyus_nsi/adapters/api/v1/controllers/: __init__.py  industrial_structure.py  nsi.py
src/polyus_nsi/adapters/api/v1/schemes/: industrial_structure.py
src/polyus_nsi/adapters/database/: __init__.py  engine.py  mapping.py  settings.py
src/polyus_nsi/adapters/database/alembic/: env.py
src/polyus_nsi/adapters/database/migrations/: 2024_07_07_03_02_56_.py  2024_07_08_00_29_54_.py  2024_07_08_01_38_04_create_industrial_structure_items_table.py  2024_07_08_05_54_05_create_ix_for_type_in_industrial_structure_items_table.py
src/polyus_nsi/adapters/database/repositories/: __init__.py  industrial_structure_repo.py
src/polyus_nsi/adapters/database/tables/: __init__.py  industrial_structure_edges.py  industrial_structure_items.py
src/polyus_nsi/application/nsi/: errors.py
src/polyus_nsi/application/nsi/dtos/: industrial_structure.py
src/polyus_nsi/application/nsi/entities/: industrial_structure.py
src/polyus_nsi/application/nsi/enums/: __init__.py  industrial_structure.py
src/polyus_nsi/application/nsi/interfaces/: __init__.py  industrial_structure_repo.py
src/polyus_nsi/application/nsi/services/: __init__.py  industrial_structure_service.py
src/polyus_nsi/run/: alembic_runner.py  polyus_nsi_api.py
